/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";

package devtools.deviceaction.schemas.proto.action;

import "src/devtools/deviceaction/schemas/proto/base_spec.proto";

option java_package = "com.google.devtools.deviceaction.framework.proto.action";
option java_multiple_files = true;

message InstallMainlineSpec {
  extend Unary {
    optional InstallMainlineSpec ext = 516738036;
  }
  extend DeviceConfig {
    optional InstallMainlineSpec install_mainline_spec = 516738036;
  }
  // Chooses one of the tags to supply modules.
  // "mainline_modules" for multiple module packages.
  // "train_folder" for a folder containing module packages.
  // "apks_zips" for multiple zipped trains.
  repeated FileSpec files = 1;
  optional bool enable_rollback = 4;
  optional bool clean_up_sessions = 5;
  optional bool dev_key_signed = 6;
}
